Update Advds dates for 2024.

--- a/_lectures/04-01-the-data-science-landscape.html
+++ b/_lectures/04-01-the-data-science-landscape.html
@@ -23,14 +23,13 @@ author:
   twitter: lawrennd
   gscholar: r3SJcvoAAAAJ
   orcid: 
-edit_url: https://github.com/lawrennd/talks/edit/gh-pages/_advds/the-data-science-landscape.md
-date: 2023-10-27
-published: 2023-10-27
+edit_url: https://github.com/mlatcl/advds/edit/gh-pages/_lamd/the-data-science-landscape.md
+date: 2024-11-01
+published: 2024-11-01
 time: "10:00"
 week: 4
 session: 1
 featured_image: assets/images/the-data-science-landscape.png
-reveal: 04-01-the-data-science-landscape.slides.html
 transition: None
 youtube: "IGRecWhh2Mo"
 layout: lecture
@@ -52,7 +51,7 @@ categories:
 <div style="text-align:right">
 <span class="editsection-bracket" style="">[</span><span
 class="editsection"
-style=""><a href="https://github.com/lawrennd/snippets/edit/main/_advds/includes/overview-2023.md" target="_blank" onclick="ga('send', 'event', 'Edit Page', 'Edit', 'https://github.com/lawrennd/snippets/edit/main/_advds/includes/overview-2023.md', 13);">edit</a></span><span class="editsection-bracket" style="">]</span>
+style=""><a href="https://github.com/lawrennd/snippets/edit/main/_advds/includes/overview-2024.md" target="_blank" onclick="ga('send', 'event', 'Edit Page', 'Edit', 'https://github.com/lawrennd/snippets/edit/main/_advds/includes/overview-2024.md', 13);">edit</a></span><span class="editsection-bracket" style="">]</span>
 </div>
 <p>Advanced Data Science is a four-week unit that will give you both a
 broad overview of the challenges of data science as well as a deep
@@ -193,6 +192,7 @@ machines operate, we lose control over our destiny. Our mistake has been
 to see machine intelligence as a reflection of our intelligence. We
 cannot understand the smarter human without understanding the human. To
 understand the machine, we need to better understand ourselves.</p>
+<p></p>
 <h1 id="the-atomic-human">The Atomic Human</h1>
 <div style="text-align:right">
 <span class="editsection-bracket" style="">[</span><span
@@ -212,8 +212,7 @@ onclick="magnifyFigure(&#39;the-atomic-human&#39;)">
 <div id="the-atomic-human-caption" class="caption-frame">
 <p>Figure: <a href="https://www.amazon.co.uk/dp/B0CGZHBSLL">The Atomic
 Human</a> <span class="citation"
-data-cites="Lawrence-atomic24">(Lawrence, 2024)</span> due for release
-in June 2024.</p>
+data-cites="Lawrence-atomic24">(Lawrence, 2024)</span>.</p>
 </div>
 </div>
 <h2 id="lies-and-damned-lies">Lies and Damned Lies</h2>
@@ -467,6 +466,9 @@ ranked as the 11th fastest computer in the world. That machine simulates
 the world’s weather each morning, and then simulates the world’s climate
 in the afternoon. It is a 16-petaflop machine, processing around 1,000
 <em>trillion</em> bits per second.</p>
+<p>See <span class="citation" data-cites="Lawrence-atomic24">Lawrence
+(2024)</span> embodiment factor p. 13, 29, 35, 79, 87, 105, 197,
+216-217, 249, 269, 353, 369.</p>
 <div class="figure">
 <div id="lotus-49-figure" class="figure-frame">
 <div class="centered" style="">
@@ -627,14 +629,14 @@ onclick="magnifyFigure(&#39;heider-simmel-shapes&#39;)">
 </div>
 <div id="heider-simmel-shapes-caption" class="caption-frame">
 <p>Figure: Fritz Heider and Marianne Simmel’s video of shapes from <span
-class="citation" data-cites="Heider:experimental44">Heider and Simmel
+class="citation" data-cites="Heider-experimental44">Heider and Simmel
 (1944)</span>.</p>
 </div>
 </div>
 <p><a href="https://en.wikipedia.org/wiki/Fritz_Heider">Fritz Heider</a>
 and <a href="https://en.wikipedia.org/wiki/Marianne_Simmel">Marianne
 Simmel</a>’s experiments with animated shapes from 1944 <span
-class="citation" data-cites="Heider:experimental44">(Heider and Simmel,
+class="citation" data-cites="Heider-experimental44">(Heider and Simmel,
 1944)</span>. Our interpretation of these objects as showing motives and
 even emotion is a combination of our desire for narrative, a need for
 understanding of each other, and our ability to empathize. At one level,
@@ -671,6 +673,8 @@ both the implication of the advert and what that implication means
 emotionally to the previous owner.</p>
 </div>
 </div>
+<p>See <span class="citation" data-cites="Lawrence-atomic24">Lawrence
+(2024)</span> baby shoes p. 368.</p>
 <p>But this is a very different kind of intelligence than ours. A
 computer cannot understand the depth of the Ernest Hemingway’s
 apocryphal six-word novel: “For Sale, Baby Shoes, Never worn”, because
@@ -895,6 +899,9 @@ data-cites="Lawrence-atomic24">Lawrence (2024)</span></p></li>
 <p>For more information on these subjects and more you might want to
 check the following resources.</p>
 <ul>
+<li>book: <a
+href="https://www.penguin.co.uk/books/455130/the-atomic-human-by-lawrence-neil-d/9780241625248">The
+Atomic Human</a></li>
 <li>twitter: <a href="https://twitter.com/lawrennd">@lawrennd</a></li>
 <li>podcast: <a href="http://thetalkingmachines.com">The Talking
 Machines</a></li>
@@ -916,7 +923,7 @@ Conference on High Performance Computing Networking, Storage and
 Analysis - SC ’09. <a
 href="https://doi.org/10.1145/1654059.1654124">https://doi.org/10.1145/1654059.1654124</a>
 </div>
-<div id="ref-Heider:experimental44" class="csl-entry" role="listitem">
+<div id="ref-Heider-experimental44" class="csl-entry" role="listitem">
 Heider, F., Simmel, M., 1944. An experimental study of apparent
 behavior. The American Journal of Psychology 57, 243–259. <a
 href="https://doi.org/10.2307/1416950">https://doi.org/10.2307/1416950</a>
@@ -927,8 +934,9 @@ cooperation. Annual Review of Psychology 72, 207–240. <a
 href="https://doi.org/10.1146/annurev-psych-081920-042106">https://doi.org/10.1146/annurev-psych-081920-042106</a>
 </div>
 <div id="ref-Lawrence-atomic24" class="csl-entry" role="listitem">
-Lawrence, N.D., 2024. The atomic human: Understanding ourselves in the
-age of AI. Allen Lane.
+Lawrence, N.D., 2024. <a
+href="https://www.penguin.co.uk/books/455130/the-atomic-human-by-lawrence-neil-d/9780241625248">The
+atomic human: Understanding ourselves in the age of AI</a>. Allen Lane.
 </div>
 <div id="ref-Lawrence:embodiment17" class="csl-entry" role="listitem">
 Lawrence, N.D., 2017. <a href="https://arxiv.org/abs/1705.07996">Living
