--- a/_lectures/05-01-the-challenges-of-data-science-ii.html
+++ b/_lectures/05-01-the-challenges-of-data-science-ii.html
@@ -11,14 +11,13 @@ author:
   twitter: lawrennd
   gscholar: r3SJcvoAAAAJ
   orcid: 
-edit_url: https://github.com/lawrennd/talks/edit/gh-pages/_advds/the-challenges-of-data-science-ii.md
-date: 2023-11-03
-published: 2023-11-03
+edit_url: https://github.com/mlatcl/advds/edit/gh-pages/_lamd/the-challenges-of-data-science-ii.md
+date: 2024-11-08
+published: 2024-11-08
 time: "10:00"
 week: 5
 session: 1
 featured_image: assets/images/the-challenges-of-data-science-ii.png
-reveal: 05-01-the-challenges-of-data-science-ii.slides.html
 transition: None
 youtube: "jdrw3kW0J18"
 layout: lecture
@@ -109,6 +108,11 @@ style=""><a href="https://github.com/lawrennd/snippets/edit/main/_data-science/i
 analysis by going through a simple example. The analysis involves body
 mass index and activity information.</p>
 <h2 id="a-hypothesis-as-a-liability">A Hypothesis as a Liability</h2>
+<div style="text-align:right">
+<span class="editsection-bracket" style="">[</span><span
+class="editsection"
+style=""><a href="https://github.com/lawrennd/snippets/edit/main/_data-science/includes/hypothesis-as-a-liability.md" target="_blank" onclick="ga('send', 'event', 'Edit Page', 'Edit', 'https://github.com/lawrennd/snippets/edit/main/_data-science/includes/hypothesis-as-a-liability.md', 13);">edit</a></span><span class="editsection-bracket" style="">]</span>
+</div>
 <p>This analysis is from an article titled “A Hypothesis as a Liability”
 <span class="citation" data-cites="Yanai-hypothesis20">(Yanai and
 Lercher, 2020)</span>, they start their article with the following quite
@@ -703,7 +707,7 @@ representation.</p>
 <p><em>Note</em>: my introduction to Fritz Heider was through a talk by
 Nick Chater in 2010, you can read Nick’s thoughts on these issues in his
 book, <em>The Mind is Flat</em> <span class="citation"
-data-cites="Chater:mindisflat19">(Chater, 2019)</span>.</p>
+data-cites="Chater:mindisflat19">(<strong>Chater:mindisflat19?</strong>)</span>.</p>
 <h1 id="quantifying-the-value-of-data">Quantifying the Value of
 Data</h1>
 <div style="text-align:right">
@@ -1359,6 +1363,9 @@ calibrated and re-integrated at appropriate fidelities.</p>
 <p>For more information on these subjects and more you might want to
 check the following resources.</p>
 <ul>
+<li>book: <a
+href="https://www.penguin.co.uk/books/455130/the-atomic-human-by-lawrence-neil-d/9780241625248">The
+Atomic Human</a></li>
 <li>twitter: <a href="https://twitter.com/lawrennd">@lawrennd</a></li>
 <li>podcast: <a href="http://thetalkingmachines.com">The Talking
 Machines</a></li>
@@ -1371,9 +1378,6 @@ href="http://inverseprobability.com/blog.html">http://inverseprobability.com</a>
 <h1 class="unnumbered" id="references">References</h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 role="list">
-<div id="ref-Chater:mindisflat19" class="csl-entry" role="listitem">
-Chater, N., 2019. The mind is flat. Penguin.
-</div>
 <div id="ref-Delacroix:trusts18" class="csl-entry" role="listitem">
 Delacroix, S., Lawrence, N.D., 2018. Disturbing the <span>“one size fits
 all”</span> approach to data governance: Bottom-up data trusts. SSRN. <a
@@ -1398,7 +1402,8 @@ href="https://doi.org/10.1017/CBO9780511790942">https://doi.org/10.1017/CBO97805
 Heider, F., 1958. The psychology of interpersonal relations. John Wiley.
 </div>
 <div id="ref-Kahneman-fastslow11" class="csl-entry" role="listitem">
-Kahneman, D., 2011. Thinking fast and slow.
+Kahneman, D., 2011. Thinking, fast and slow. Farrar, Straus; Giroux, New
+York.
 </div>
 <div id="ref-Lawrence-drl17" class="csl-entry" role="listitem">
 Lawrence, N.D., 2017. Data readiness levels. ArXiv.
