--- a/_lectures/06-01-dimensionality-reduction.html
+++ b/_lectures/06-01-dimensionality-reduction.html
@@ -13,14 +13,13 @@ author:
   twitter: lawrennd
   gscholar: r3SJcvoAAAAJ
   orcid: 
-edit_url: https://github.com/lawrennd/talks/edit/gh-pages/_advds/dimensionality-reduction.md
-date: 2023-11-10
-published: 2023-11-10
+edit_url: https://github.com/mlatcl/advds/edit/gh-pages/_lamd/dimensionality-reduction.md
+date: 2024-11-15
+published: 2024-11-15
 time: "10:00"
 week: 6
 session: 1
 featured_image: slides/diagrams/dimred/dem_manifold_print002.png
-reveal: 06-01-dimensionality-reduction.slides.html
 transition: None
 ipynb: 06-01-dimensionality-reduction.ipynb
 youtube: "0mtK2_rc0IY"
@@ -1720,10 +1719,10 @@ onclick="magnifyFigure(&#39;olivetti-faces-data&#39;)">
 of the data matrix. This is because the images are turned into vectors
 by stacking columns of the image on top of each other to form a vector.
 The operation</p>
-<p><code>im = np.reshape(Y[1, :].flatten(), (64, 64)).T</code></p>
+<p><code>im = np.reshape(Y[1, :].flatten(), (64, 64)).T}</code></p>
 <p>recovers the original image into a matrix <code>im</code> by using
 the <code>np.reshape</code> function to return the vector to a
-matrix.}</p>
+matrix.</p>
 <h2 id="visualizing-the-eigenvectors">Visualizing the Eigenvectors</h2>
 <p>Each retained eigenvector is stored in the <span
 class="math inline">\(j\)</span>th column of <span
@@ -1859,6 +1858,9 @@ data-cites="Rogers:book11">Rogers and Girolami (2011)</span></li>
 <p>For more information on these subjects and more you might want to
 check the following resources.</p>
 <ul>
+<li>book: <a
+href="https://www.penguin.co.uk/books/455130/the-atomic-human-by-lawrence-neil-d/9780241625248">The
+Atomic Human</a></li>
 <li>twitter: <a href="https://twitter.com/lawrennd">@lawrennd</a></li>
 <li>podcast: <a href="http://thetalkingmachines.com">The Talking
 Machines</a></li>
