Update with new practicals

--- a/_lectures/04-01-the-data-science-landscape.html
+++ b/_lectures/04-01-the-data-science-landscape.html
@@ -30,6 +30,7 @@ time: "10:00"
 week: 4
 session: 1
 featured_image: assets/images/the-data-science-landscape.png
+reveal: 04-01-the-data-science-landscape.slides.html
 transition: None
 youtube: "IGRecWhh2Mo"
 layout: lecture
