Fix practical one date

--- a/_lectures/04-01-the-data-science-landscape.html
+++ b/_lectures/04-01-the-data-science-landscape.html
@@ -130,7 +130,7 @@ learning community, but real-world experience of deploying and/or
 assisting with deployments of data science solutions at Amazon, for
 pandemic policy advice and in the African context (particularly Uganda
 and Kenya).</p>
-<p>Due dates are as follows:</p>
+<p>Dates are as follows:</p>
 <table>
 <colgroup>
 <col style="width: 26%" />
@@ -155,7 +155,7 @@ and Kenya).</p>
 </tr>
 <tr class="even">
 <td>Practical 1</td>
-<td>01/11/2024 12:00</td>
+<td>04/11/2024 17:00</td>
 <td>07/11/2024 12:00</td>
 <td>07/11/2024 15:00</td>
 </tr>
@@ -820,10 +820,13 @@ understanding of each other, and our ability to empathize. At one level,
 these are crudely drawn objects, but in another way, the animator has
 communicated a story through simple facets such as their relative
 motions, their sizes and their actions. We apply our psychological
-representations to these faceless shapes to interpret their actions.</p>
+representations to these faceless shapes to interpret their actions
+[Heider-interpersonal58].</p>
 <p>See also a recent review paper on Human Cooperation by <span
 class="citation" data-cites="Joseph-origins21">Henrich and Muthukrishna
-(2021)</span>.</p>
+(2021)</span>. See <span class="citation"
+data-cites="Lawrence-atomic24">Lawrence (2024)</span> psychological
+representation p. 326–329, 344–345, 353, 361, 367.</p>
 <h2 id="computer-conversations">Computer Conversations</h2>
 <div style="text-align:right">
 <span class="editsection-bracket" style="">[</span><span
