--- a/slides/04-01-the-data-science-landscape.slides.html
+++ b/slides/04-01-the-data-science-landscape.slides.html
@@ -1327,7 +1327,8 @@ Atomic Human</a> pages <em>Le Scaphandre et le papillon</em> (<em>The
 Diving Bell and the Butterfly</em>) 10–12 , Bauby, Jean Dominique 9–11,
 18, 90, 99-101, 133, 186, 212–218, 234, 240, 251–257, 318, 368–369,
 Shannon, Claude 10, 30, 61, 74, 98, 126, 134, 140, 143, 149, 260, 264,
-269, 277, 315, 358, 363, human-analogue machine (HAMs) 343-347, 359-359,
+269, 277, 315, 358, 363, psychological representation 326–329, 344–345,
+353, 361, 367, human-analogue machine (HAMs) 343-347, 359-359,
 365-368.</p></li>
 <li><p>podcast: <a href="http://thetalkingmachines.com">The Talking
 Machines</a></p></li>
