--- a/_lectures/04-01-the-data-science-landscape.html
+++ b/_lectures/04-01-the-data-science-landscape.html
@@ -32,7 +32,7 @@ session: 1
 featured_image: assets/images/the-data-science-landscape.png
 reveal: 04-01-the-data-science-landscape.slides.html
 transition: None
-youtube: "IGRecWhh2Mo"
+youtube: "KrCQndnDQ7I"
 layout: lecture
 categories:
 - notes
