--- a/_lectures/04-02-ai-and-data-science.html
+++ b/_lectures/04-02-ai-and-data-science.html
@@ -24,7 +24,9 @@ time: "10:00"
 week: 4
 session: 2
 featured_image: assets/images/the-challenges-of-data-science.png
+reveal: 04-02-ai-and-data-science.slides.html
 transition: None
+ipynb: 04-02-ai-and-data-science.ipynb
 youtube: "BQKfIJHPiCQ"
 layout: lecture
 categories:
