--- a/_lectures/04-02-ai-and-data-science.html
+++ b/_lectures/04-02-ai-and-data-science.html
@@ -27,7 +27,7 @@ featured_image: assets/images/the-challenges-of-data-science.png
 reveal: 04-02-ai-and-data-science.slides.html
 transition: None
 ipynb: 04-02-ai-and-data-science.ipynb
-youtube: "BQKfIJHPiCQ"
+youtube: "NlCJejLMkHI"
 layout: lecture
 categories:
 - notes
