--- a/_lectures/04-03-engineering-data-science.html
+++ b/_lectures/04-03-engineering-data-science.html
@@ -1,6 +1,10 @@
 ---
 title: "Engineering Data Science"
 venue: "LT2, William Gates Building"
+abstract: "<p>In this lecture we explore the intersection between
+systems engineering principles and data science. This provides a
+framework that emphasizes the importance of context in addressing modern
+data science challenges.</p>"
 author:
 - given: Christian
   family: Cabrera
@@ -15,7 +19,7 @@ published: 2024-11-06
 time: "10:00"
 week: 4
 session: 3
-featured_image: assets/images//a-data-science-process.png
+featured_image: assets/images/a-data-science-process.png
 transition: None
 pdfslides: engineering-data-science.pdf
 layout: lecture
@@ -33,4 +37,10 @@ categories:
 <!--
 
 -->
+<p>begin by examining three key challenges: bias, complexity and
+intellectual debt. Each of these challenges impacts solution deployment,
+maintenance and interpretability.</p>
+<p>We emphasise that while model development is an important part of the
+pipeline, focussing only on model accuracy can cause us to overlook
+real-world deployment challenges.</p>
 
