Update for Engineering Data Science

--- a/_lectures/04-03-engineering-data-science.html
+++ b/_lectures/04-03-engineering-data-science.html
@@ -19,7 +19,7 @@ published: 2024-11-06
 time: "10:00"
 week: 4
 session: 3
-featured_image: assets/images/a-data-science-process.png
+featured_image: assets/images/154937-ouy119-839-copy.jpg
 transition: None
 pdfslides: engineering-data-science.pdf
 layout: lecture
