Update for Engineering Data Science

--- a/_lectures/04-03-engineering-data-science.html
+++ b/_lectures/04-03-engineering-data-science.html
@@ -108,7 +108,7 @@ style=""><a href="https://github.com/lawrennd/snippets/edit/main/_data-science/i
 problems that aligns with systems engineering principles.</p>
 <div class="figure">
 <div id="ads-cycle-figure" class="figure-frame">
-<object class="svgplot " data="ads-cycle.svg" width="60%" style=" ">
+<object class="svgplot " data="access-assess-address-cycle.svg" width="60%" style=" ">
 </object>
 </div>
 <div id="ads-cycle-magnify" class="magnify"
