Update for Engineering Data Science

--- a/_lectures/04-03-engineering-data-science.html
+++ b/_lectures/04-03-engineering-data-science.html
@@ -108,7 +108,7 @@ style=""><a href="https://github.com/lawrennd/snippets/edit/main/_data-science/i
 problems that aligns with systems engineering principles.</p>
 <div class="figure">
 <div id="ads-cycle-figure" class="figure-frame">
-<object class="svgplot " data="access-assess-address-cycle.svg" width="60%" style=" ">
+<object class="svgplot " data="https://mlatcl.github.io/advds/./slides/diagrams//data-science/access-assess-address-cycle.svg" width="60%" style=" ">
 </object>
 </div>
 <div id="ads-cycle-magnify" class="magnify"
@@ -116,7 +116,7 @@ onclick="magnifyFigure(&#39;ads-cycle&#39;)">
 <img class="img-button" src="{{ '/assets/images/Magnify_Large.svg' | relative_url }}" style="width:1.5ex">
 </div>
 <div id="ads-cycle-caption" class="caption-frame">
-<p>Figure: The Assessment, Access, Address cycle</p>
+<p>Figure: The Assess, Access, Address cycle</p>
 </div>
 </div>
 <h2 id="thanks">Thanks!</h2>
