--- a/_lectures/04-03-engineering-data-science.html
+++ b/_lectures/04-03-engineering-data-science.html
@@ -76,7 +76,8 @@ motivate the need for an engineering approach:</p>
 <p>Systematic tendency in methods used to geather data and computer
 statistics that generate inaccurate depictions of reality.</p>
 <ul>
-<li>Challenges our ability to deploy safe and effective solutions:
+<li><p>Challenges our ability to deploy safe and effective
+solutions:</p>
 <ul>
 <li>Alignment</li>
 <li>Fairness</li>
@@ -87,14 +88,18 @@ statistics that generate inaccurate depictions of reality.</p>
 processing pipelines involve hundreds or thousands of components.</p>
 <p>Challengers our techincical ability to deploy and maintain our
 solutions:</p>
-<pre><code>* Sustainability
-* Maintainability</code></pre>
+<ul>
+<li>Sustainability</li>
+<li>Maintainability</li>
+</ul>
 <p>Black-box components make systems hard to understand and threaten
 human control. We know how the components work but do not know how the
 system works.</p>
 <p>Challenges our ability to explain our solutions</p>
-<pre><code>* Interpretability
-* Accountability</code></pre>
+<ul>
+<li>Interpretability</li>
+<li>Accountability</li>
+</ul>
 <div class="figure">
 <div id="data-engineering-principles-figure" class="figure-frame">
 <object class="svgplot " data="https://mlatcl.github.io/advds/./slides/diagrams//data-science/data-engineering-principles.svg" width="90%" style=" ">
